--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   cached_network_image: ^3.4.1
+  url_launcher: ^6.3.1
+  video_player: ^2.9.5
+  flutter_pdfview: ^1.4.0+1
+  path_provider: ^2.1.5
+  video_thumbnail: ^0.5.6
+  font_awesome_flutter: ^10.8.0
+  readmore: ^3.0.0
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
