--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   readmore: ^3.0.0
   file_picker: ^10.1.9
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
